# NADA-BOSS-Vocal-Suite

./: .gitignore  AUDIO_QUALITY_AUDIT.md  CMakeLists.txt  DSP_NOTES.md  NADA_Installer.iss  NADA_Vocal_Suite.jucer  OPTIMIZATION_NOTES.md  README.md  RELEASE_NOTES_V7.7.7.md
.github/workflows/: build.yml
Source/: AUDIO_QUALITY_AUDIT.md  DEPLOY_V7.7.7.ps1  ONNXModelManager.h  PRE_COMMIT_CHECKLIST.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RELEASE_NOTES_V7.7.7.md
Source/Interface/: hardware_ui.css  index.html  index_pro.html  script.js  style.css  style_pro.css  three_ui.js
Source/Interface/vst-gui/: index.html  package.json
Source/Interface/vst-gui/src/: App.jsx  index.css
Source/ai/: ONNXModelManager.h
Source/dsp/: NADAPitchShifter.h  PluginProcessor.cpp  PluginProcessor.h
Source/gui/: PluginEditor.cpp  PluginEditor.h
Source/gui/vst-gui/: package-lock.json  package.json
Source/gui/vst-gui/src/: App.jsx  index.css
